    + [NT] Fix a broken regex that caused Lintian skip brace
      expansion checks for some debhelper files.  Thanks to
      Jakub Wilk for the report and the patch.  (Closes: #632883)
    + [NT] Do not consider "debian/debhelper" a temporary debhelper
      file.  Some packages uses this a directory to store their
      debhelper files.
  * checks/debian-source-dir.desc:
    + [NT] Added missing word in the tag description for
      git-patches-not-exported.
  * checks/duplicate-files:
    + [NT] Exclude  __init__.py files from the check as they are
      required even if they are empty.  Thanks to Daniele Tricoli
      for the report.  (Closes: #632789)
    + [NT] Report duplicate changelogs as a separate tag.
  * checks/fields:
    + [NT] Refactored to use Lintian::Data and use new data files
      from data/fields.
    + [NT] Added python3-dev and rmeoved python2.{4,5} from
      $PYTHON_DEV.  Thanks to Jakub Wilk for the report and the
      patch.  (Closes: #633044)
    + [NT] Fixed a bug where the libdb1-compat tag only triggered
      if libdb1-compat was listed in Pre-Depends.
    + [NT] Updated list of python "dev" packages.  Thanks to
      Jakub Wilk for the patch.
  * checks/filename-length{,.desc}:
    + [NT] New file that checks the length of the package file
      names.  (Closes: #631656)
  * checks/files:
    + [NT] Check for embedded copies of the underscore javascript
      library.  Thanks to Jakub Wilk for report and the patch.
      (Closes: #631513)
    + [NT] Removed a leading slash from the filename part of the
      extra for python-debug-in-wrong-location.  Thanks to
      Jakub Wilk for the report and the patch.  (Closes: #631530)
    + [NT] Accepted patch from Marcelo Jorge Vieira to catch
      four additional embedded javascript libraries.
      (Closes: #635447)
    + [NT] Stricten the regex for finding .xvpics dirs.
    + [NT] Shipping a lintian override is no longer enough to