@@ -39,7 +39,7 @@ my $info = shift;
 
 my $dsrc = $info->debfiles('source');
 
-if (-e "$dsrc/format") {
+if ( ! -l "$dsrc/format" && -e "$dsrc/format") {
     open(FORMAT, '<', "$dsrc/format") or
         fail("cannot read debian/source/format: $!");
     my $format = <FORMAT>;
@@ -49,27 +49,31 @@ if (-e "$dsrc/format") {
     tag 'missing-debian-source-format';
 }
 
-if (-s "$dsrc/git-patches") {
+if ( ! -l "$dsrc/git-patches" && -s "$dsrc/git-patches") {
     open (GITPATCHES, "$dsrc/git-patches")
 	or fail("cannot open debian/source/git-patches: $!");
     if (grep !/^\s*+#|^\s*+$/o, <GITPATCHES>) {
 	my $dpseries = $info->debfiles('patches/series');
-	if (! -r $dpseries ) {
-	    tag 'git-patches-not-exported';
-	} else {
-	    open (DEBSERIES, $dpseries)
-		or fail("cannot open debian/patches/series: $!");
-	    my $comment_line = <DEBSERIES>;
-	    my $count = grep !/^\s*+\#|^\s*+$/o, <DEBSERIES>;
-	    tag 'git-patches-not-exported'
-		unless ($count && ($comment_line =~ m/^\s*\#.*quilt-patches-deb-export-hook/o));
-	    close(DEBSERIES);
+	# gitpkg does not create series as a link, so this is most likely
+	# a traversal attempt.
+	if (! -l $dpseries ) {
+	    if (! -r $dpseries ) {
+		tag 'git-patches-not-exported';
+	    } else {
+		open (DEBSERIES, $dpseries)
+		    or fail("cannot open debian/patches/series: $!");
+		my $comment_line = <DEBSERIES>;
+		my $count = grep !/^\s*+\#|^\s*+$/o, <DEBSERIES>;
+		tag 'git-patches-not-exported'
+		    unless ($count && ($comment_line =~ m/^\s*\#.*quilt-patches-deb-export-hook/o));
+		close(DEBSERIES);
+	    }
 	}
     }
     close(GITPATCHES);
 }
 
-if (-d $dsrc ) {
+if ( ! -l $dsrc && -d $dsrc ) {
     opendir(DEBSRC, $dsrc) or fail("cannot opendir debian/source/: $!");
     my $file;
     while ($file = readdir(DEBSRC)) {
