@@ -1,0 +1,4 @@
+Testname: debian-source-dir-traversal-1
+Sequence: 6000
+Version: 1.0
+Description: Test for information discloure via d/source
